include architecture diagram and excluding of rds

--- a/officebooks.env
+++ b/officebooks.env
@@ -1,1 +1,6 @@
 DOMAIN_NAME=www.office-books.com
+POSTGRES_PORT=25060
+POSTGRES_USER=doadmin
+POSTGRES_PASSWORD=AVNS_YS8K4ga6Q7wuk5_2LhY
+POSTGRES_HOST=db-postgresql-sgp1-95232-do-user-14654481-0.c.db.ondigitalocean.com
+POSTGRES_DB_NAME=defaultdb
